--- a/Prestação de Serviços/index.html
+++ b/Prestação de Serviços/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <img src="img/logo.png" alt="logo" />
-    <h1>PRESTAÇÃO DE SERVIÇOS</h1>
+    <h1>HNW PRESTAÇÕES DE SERVIÇOS</h1>
 
     <div class="sobre-nos">
       <a href="#" id="sobreNosLink">Sobre nós</a>
@@ -291,7 +291,7 @@
 
   <footer>
     <div class="copy">
-      <p>&copy; 2025 Prestação de Serviços.</p>
+      <p>&copy; 2025 HNW Prestações de Serviços.</p>
     </div>
 
   </footer>
